[gd_scene load_steps=13 format=3 uid="uid://c7ttf85vfj4cj"]

[ext_resource type="Script" path="res://assets/voiture/voiture.gd" id="1_ydcxa"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(2, 0.75, 4.5)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(2, 0.75, 4.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
metallic = 0.7
roughness = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_2"]
size = Vector3(1.8, 0.6, 2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.9, 0.9, 0.9, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_1"]
top_radius = 0.4
bottom_radius = 0.4
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.9
roughness = 0.1

[sub_resource type="BoxMesh" id="BoxMesh_3"]
size = Vector3(0.1, 0.1, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4"]
albedo_color = Color(1, 0.843137, 0, 1)
emission_enabled = true
emission = Color(1, 0.843137, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_2"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.05
radial_segments = 16
rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6"]
albedo_color = Color(0.8, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 0.0

[node name="Car" type="VehicleBody3D"]
collision_layer = 2
collision_mask = 3
mass = 3000.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.1, 0)
script = ExtResource("1_ydcxa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375, 0)
shape = SubResource("BoxShape3D_1")

[node name="CarBody" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8, 0, 0, 0, 1, 0, 0.507589, 0)
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="CarBody2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8, 0, 0, 0, 1, 0, 0.507589, 0)
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="Cabin" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0.00248837)
mesh = SubResource("BoxMesh_2")
surface_material_override/0 = SubResource("StandardMaterial3D_2")

[node name="FrontLeftWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.4, 1.5)
use_as_traction = true
use_as_steering = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="FrontLeftWheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_3")

[node name="FrontRightWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.4, 1.5)
use_as_traction = true
use_as_steering = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="FrontRightWheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_3")

[node name="RearLeftWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.4, -1.5)
use_as_traction = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="RearLeftWheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_3")

[node name="RearRightWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.4, -1.5)
use_as_traction = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="RearRightWheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_3")

[node name="Headlights" type="Node3D" parent="."]

[node name="LeftHeadlight" type="MeshInstance3D" parent="Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.5, 2.2)
mesh = SubResource("BoxMesh_3")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="LeftHeadlightLight" type="SpotLight3D" parent="Headlights/LeftHeadlight"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
light_color = Color(1, 0.945098, 0.909804, 1)
light_energy = 5.0
light_indirect_energy = 2.0
light_volumetric_fog_energy = 2.0
spot_range = 30.0
spot_angle = 30.0
spot_angle_attenuation = 0.5

[node name="RightHeadlight" type="MeshInstance3D" parent="Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.5, 2.2)
mesh = SubResource("BoxMesh_3")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="RightHeadlightLight" type="SpotLight3D" parent="Headlights/RightHeadlight"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
light_color = Color(1, 0.945098, 0.909804, 1)
light_energy = 5.0
light_indirect_energy = 2.0
light_volumetric_fog_energy = 2.0
spot_range = 30.0
spot_angle = 30.0
spot_angle_attenuation = 0.5

[node name="LeftHeadlight2" type="MeshInstance3D" parent="Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.5, 2.2)
mesh = SubResource("BoxMesh_3")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="RightHeadlight2" type="MeshInstance3D" parent="Headlights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.5, 2.2)
mesh = SubResource("BoxMesh_3")
surface_material_override/0 = SubResource("StandardMaterial3D_4")

[node name="Taillights" type="Node3D" parent="."]

[node name="LeftTaillight" type="MeshInstance3D" parent="Taillights"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.9, 0.5, -2.24)
mesh = SubResource("CylinderMesh_2")
surface_material_override/0 = SubResource("StandardMaterial3D_6")

[node name="RightTaillight" type="MeshInstance3D" parent="Taillights"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.9, 0.5, -2.24)
mesh = SubResource("CylinderMesh_2")
surface_material_override/0 = SubResource("StandardMaterial3D_6")

[node name="LeftBrakeLight" type="SpotLight3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 0, 5.61943e-08, -0.642788, 0.766044, -6.69697e-08, 0.766044, 0.642788, 0.9, 0.5, -2.31019)
visible = false
light_color = Color(1, 0, 0, 1)
light_energy = 2.0
light_indirect_energy = 2.0
light_volumetric_fog_energy = 3.0
spot_range = 3.0
spot_angle_attenuation = 2.0

[node name="RightBrakeLight" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -5.61943e-08, -0.642788, 0.766044, 6.69697e-08, 0.766044, 0.642788, -0.9, 0.5, -2.28291)
visible = false
light_color = Color(1, 0, 0, 1)
light_energy = 2.0
light_indirect_energy = 2.0
light_volumetric_fog_energy = 2.0
spot_range = 3.0
spot_angle_attenuation = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
